syntax = "proto3";
option go_package = "HW03/proto";
package proto;

service Twitter
{
    rpc SayHi (stream Greeting) returns (stream Farewell);
}
message Greeting {
    string clientName = 1;
    string message = 2;
    
}

message Farewell {
    string message = 1;
}